objects/pymt__Terminal_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Allows management of PaymentConnect terminal features on a user-by-user basis.</description>
    <fields>
        <fullName>pymt__ARB_Default_Processor__c</fullName>
        <description>Default processor connection to use in the AuthNet Recurring Billing Terminal.</description>
        <inlineHelpText>Default processor connection to use in the AuthNet Recurring Billing Terminal.</inlineHelpText>
        <label>Default Processor Connection</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Auto_Check_Save_Payment_Method__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto-Check the &quot;Save Payment Method&quot; option checkbox.</description>
        <inlineHelpText>Auto-Check the &quot;Save Payment Method&quot; option checkbox.</inlineHelpText>
        <label>Auto-Check Save Payment Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Enable_Card_Swipe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the card swipe option (check documentation for supported card readers).</description>
        <inlineHelpText>Enables the card swipe option (check documentation for supported card readers).</inlineHelpText>
        <label>Enable Card Swipe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Enable_User_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, allows users to edit their own personal terminal settings.</description>
        <inlineHelpText>If checked, allows users to edit their own personal terminal settings.</inlineHelpText>
        <label>Enable User Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Hide_ARB_Cat_Split_Names__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides the category split picklist on the AuthNet ARB Terminal.</description>
        <inlineHelpText>Hides the category split picklist on the AuthNet ARB Terminal.</inlineHelpText>
        <label>Hide Category Split Names</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Hide_ARB_Invoice_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show/Hide the AuthNet ARB Terminal Invoice Number field.</description>
        <inlineHelpText>Show/Hide the AuthNet ARB Terminal Invoice Number field.</inlineHelpText>
        <label>Hide ARB Invoice Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Hide_ARB_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show/Hide shipping fields on the AuthNet Recurring Billing terminal</description>
        <inlineHelpText>Show/Hide shipping fields on the AuthNet Recurring Billing terminal</inlineHelpText>
        <label>Hide ARB Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Hide_AuthNet_Trial_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Hide/show trial subscription fields (trial amount, frequency, period &amp; occurrences) on the PayPal recurring payment terminal.</inlineHelpText>
        <label>Hide AuthNet Trial Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Hide_Cash_Entry_Cat_Split_Names__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides the category split picklist from the Cash Entry terminal</description>
        <inlineHelpText>Hides the category split picklist from the Cash Entry terminal</inlineHelpText>
        <label>Hide Category Split Names</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Hide_Cash_Entry_Shipping_Address_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides shipping address fields on the Cash Entry terminal.</description>
        <inlineHelpText>Hides shipping address fields on the Cash Entry terminal.</inlineHelpText>
        <label>Hide Shipping Address Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Hide_Native_Recur_Cat_Split_Names__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides the category split names picklist on the native Scheduled Payments Terminal.</description>
        <inlineHelpText>Hides the category split names picklist on the native Scheduled Payments Terminal.</inlineHelpText>
        <label>Hide Category Split Names</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Hide_Native_Recur_Shipping_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides the shipping address fields on the Native Scheduled Payments Terminal.</description>
        <inlineHelpText>Hides the shipping address fields on the Native Scheduled Payments Terminal.</inlineHelpText>
        <label>Hide Shipping Address Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Hide_Native_Recur_Trial_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides the subscription trial fields on the Native Scheduled Payments Terminal.</description>
        <inlineHelpText>Hides the subscription trial fields on the Native Scheduled Payments Terminal.</inlineHelpText>
        <label>Hide Subscription Trial Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Hide_PayPal_Profile_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide/Show the PayPal recurring payment profile Reference Number field.</description>
        <inlineHelpText>Hide/Show the PayPal recurring payment profile Reference Number field.</inlineHelpText>
        <label>Hide PayPal Profile Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Hide_PayPal_Recurring_Cat_Split_Names__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides the category split picklist on the PayPal Subscription Terminal.</description>
        <inlineHelpText>Hides the category split picklist on the PayPal Subscription Terminal.</inlineHelpText>
        <label>Hide Category Split Names</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Hide_PayPal_Recurring_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show/Hide shipping fields on the PayPal Recurring Payments terminal</description>
        <inlineHelpText>Show/Hide shipping fields on the PayPal Recurring Payments terminal</inlineHelpText>
        <label>Hide PayPal Recurring Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Hide_PayPal_Recurring_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show/Hide PayPal Recurring Payment tax fields on the terminal</description>
        <inlineHelpText>Show/Hide PayPal Recurring Payment tax fields on the terminal</inlineHelpText>
        <label>Hide PayPal Recurring Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Hide_PayPal_Trial_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Hide/show trial subscription fields (trial amount, frequency, period &amp; occurrences) on the PayPal recurring payment terminal.</inlineHelpText>
        <label>Hide PayPal Trial Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Hide_Pmt_Term_Cat_Split_Names__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides the category split picklist from the payment terminal</description>
        <inlineHelpText>Hides the category split picklist from the payment terminal</inlineHelpText>
        <label>Hide Category Split Names</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Hide_Pmt_Term_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide/Show the invoice number field on the credit card terminal</description>
        <inlineHelpText>Hide/Show the invoice number field</inlineHelpText>
        <label>Hide Invoice Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Hide_Pmt_Term_Shipping_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Hide/show shipping address fields on the Payment Terminal</inlineHelpText>
        <label>Hide Shipping Address Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Hide_Pmt_Term_Shipping_Handling__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Hide/show the Payment Terminal shipping and handling amount field.</inlineHelpText>
        <label>Hide Shipping and Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__PRB_Default_Processor__c</fullName>
        <description>Default processor connection to use in the PayPal Recurring Billing Terminal.</description>
        <inlineHelpText>Default processor connection to use in the PayPal Recurring Billing Terminal.</inlineHelpText>
        <label>Default Processor Connection</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Pmt_Term_Default_Processor__c</fullName>
        <description>Default processor connection to use in the Credit Card terminal.  Can be overriden by setting terminal URL parameters or setting the processor connection on the Payment record being passed in.</description>
        <inlineHelpText>Default processor connection to use in the Credit Card terminal.  Can be overriden by setting terminal URL parameters or setting the processor connection on the Payment record being passed in.</inlineHelpText>
        <label>Default Processor Connection</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Terminal Settings</label>
</CustomObject>